zetasql/compliance/testdata/concat_function.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_proto_names=zetasql_test__.KitchenSinkPB]
[load_enum_names=zetasql_test__.TestEnum]
[default test_features1=V_1_3_CONCAT_MIXED_TYPES]

[name=concat_null]
SELECT CONCAT(x) FROM UNNEST([NULL]) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{NULL}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: INT64. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([NULL]) x
       ^
==
[name=concat_bool]
SELECT CONCAT(x, NOT x) FROM UNNEST([true]) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"truefalse"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: BOOL, BOOL. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x, NOT x) FROM UNNEST([true]) x
       ^
==
[name=concat_int64]
SELECT CONCAT(x, -x) FROM UNNEST([239]) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"239-239"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: INT64, INT64. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x, -x) FROM UNNEST([239]) x
       ^
==
[name=concat_uint32]
SELECT CONCAT("uint", x) FROM UNNEST([CAST(32 AS UINT32)]) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"uint32"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: STRING, UINT32. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT("uint", x) FROM UNNEST([CAST(32 AS UINT32)]) x
       ^
==
[name=concat_numeric]
[test_features2=NUMERIC_TYPE]
SELECT CONCAT(x) FROM UNNEST([CAST('99999999999999999999999.87654321' AS NUMERIC)]) x
--
WITH FEATURES: NUMERIC_TYPE,V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"99999999999999999999999.87654321"}]
--
WITH FEATURES: NUMERIC_TYPE
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: NUMERIC. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([CAST('99999999999999999999999.87654321' AS NUME...
       ^
--
WITH FEATURES: <none>
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ERROR: generic::invalid_argument: Type not found: NUMERIC [at 1:74]
...UNNEST([CAST('99999999999999999999999.87654321' AS NUMERIC)]) x
                                                      ^
==
[name=concat_double]
SELECT CONCAT(1.23456789, -8765432.1, 1e55)
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"1.23456789-8765432.11e+55"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: DOUBLE, DOUBLE, DOUBLE. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(1.23456789, -8765432.1, 1e55)
       ^
==
[name=concat_timestamp]
SELECT CONCAT(x) FROM UNNEST([TIMESTAMP '2000-01-02 03:04:05.678']) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"2000-01-02 03:04:05.678-08"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: TIMESTAMP. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([TIMESTAMP '2000-01-02 03:04:05.678']) x
       ^
==
[name=concat_date]
SELECT CONCAT(x) FROM UNNEST([DATE '2020-10-10']) x
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"2020-10-10"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: DATE. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([DATE '2020-10-10']) x
       ^
==
[name=concat_datetime]
[test_features2=V_1_2_CIVIL_TIME]
SELECT CONCAT(x) FROM UNNEST([DATETIME '2015-12-21 23:54:32']) x
--
WITH FEATURES: V_1_2_CIVIL_TIME,V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"2015-12-21 23:54:32"}]
--
WITH FEATURES: V_1_2_CIVIL_TIME
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: DATETIME. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([DATETIME '2015-12-21 23:54:32']) x
       ^
--
WITH FEATURES: <none>
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ERROR: generic::invalid_argument: Type not found: DATETIME [at 1:31]
SELECT CONCAT(x) FROM UNNEST([DATETIME '2015-12-21 23:54:32']) x
                              ^
==
[name=concat_time]
[test_features2=V_1_2_CIVIL_TIME]
SELECT CONCAT(x) FROM UNNEST([TIME '01:02:03.456789']) x
--
WITH FEATURES: V_1_2_CIVIL_TIME,V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"01:02:03.456789"}]
--
WITH FEATURES: V_1_2_CIVIL_TIME
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: TIME. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x) FROM UNNEST([TIME '01:02:03.456789']) x
       ^
--
WITH FEATURES: <none>
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ERROR: generic::invalid_argument: Type not found: TIME [at 1:31]
SELECT CONCAT(x) FROM UNNEST([TIME '01:02:03.456789']) x
                              ^
==
[name=concat_interval]
[test_features1=V_1_3_CONCAT_MIXED_TYPES,INTERVAL_TYPE]
SELECT CONCAT(x), CONCAT('a', x)  FROM UNNEST([INTERVAL '1 2 3' MONTH TO HOUR]) x
--
WITH FEATURES: INTERVAL_TYPE,V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING, STRING>>[{"0-1 2 3:0:0", "a0-1 2 3:0:0"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: Unexpected INTERVAL expression [at 1:48]
SELECT CONCAT(x), CONCAT('a', x)  FROM UNNEST([INTERVAL '1 2 3' MONTH TO HOUR...
                                               ^
==
[name=concat_proto]
SELECT CONCAT(x.int64_key_1, x) FROM UNNEST([NEW zetasql_test__.KitchenSinkPB(5 AS int64_key_1, 6 AS int64_key_2)]) x;
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"5int64_key_1: 5 int64_key_2: 6"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: INT64, zetasql_test__.KitchenSinkPB. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(x.int64_key_1, x) FROM UNNEST([NEW zetasql_test__.KitchenSinkPB...
       ^
==
[name=concat_enum]
SELECT CONCAT(
  CAST(1 AS zetasql_test__.TestEnum),
  CAST(2 AS zetasql_test__.TestEnum),
  CAST(2147483647 AS zetasql_test__.TestEnum));
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"TESTENUM1TESTENUM2TESTENUM2147483647"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: zetasql_test__.TestEnum, zetasql_test__.TestEnum, zetasql_test__.TestEnum. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(
       ^
==
[name=concat_all_basic_types]
SELECT CONCAT(0.1, 'A', -5, DATE '0001-01-01', true, TIMESTAMP '1999-12-31 23:59:59.999')
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"0.1A-50001-01-01true1999-12-31 23:59:59.999-08"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: DOUBLE, STRING, INT64, DATE, BOOL, TIMESTAMP. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(0.1, 'A', -5, DATE '0001-01-01', true, TIMESTAMP '1999-12-31 23...
       ^
==
[name=concat_parameters]
[parameters=false as pbool, -321 as pint, 9.876 as pdouble, DATE '1999-11-22' as pdate]
SELECT CONCAT(@pbool, @pint, @pdouble, @pdate)
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"false-3219.8761999-11-22"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for function CONCAT for argument types: BOOL, INT64, DOUBLE, DATE. Supported signatures: CONCAT(STRING, [STRING, ...]); CONCAT(BYTES, [BYTES, ...]) [at 1:8]
SELECT CONCAT(@pbool, @pint, @pdouble, @pdate)
       ^
==
[name=concat_operator]
[parameters=123 as num]
SELECT date '2000-01-01' || ' ' || (1 > 0) || @num || ' ,pi=' || round(acos(0.0)*2,8)
--
WITH FEATURES: V_1_3_CONCAT_MIXED_TYPES
ARRAY<STRUCT<STRING>>[{"2000-01-01 true123 ,pi=3.14159265"}]
--
WITH FEATURES: <none>
ERROR: generic::invalid_argument: No matching signature for operator || for argument types: DATE, STRING. Supported signatures: STRING || STRING; BYTES || BYTES; ARRAY || ARRAY [at 1:8]
SELECT date '2000-01-01' || ' ' || (1 > 0) || @num || ' ,pi=' || round(acos(0...
       ^
